# helphealth

./: docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  docker-cmd.sh  pyproject.toml
backend/api/: admin.py  constants.py  filters.py  models.py  serializers.py  signals.py  tasks.py  urls.py  validators.py  views.py
backend/api/function/: conv.py
backend/api/management/commands/: analysis_indicators.csv  chronic_diseases.csv  import_analysis_indicators.py  import_chronic_diseases.py  import_specializations.py  specializations.csv
backend/api/migrations/: 0001_initial.py  0002_doctor_email_confirmation_token_and_more.py
backend/backend/: settings.py  urls.py
frontend/: nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  fonts.css  index.css
frontend/src/LoginPage/: LoginPage.css  LoginPage.js
frontend/src/MainPage/: Patients.css  Patients.js
frontend/src/PatientPage/: PatientPage.css  PatientPage.js
frontend/src/ProfilePage/: ProfilePage.css  ProfilePage.js
frontend/src/RegisterPage/: ConfirmEmailPage.css  ConfirmEmailPage.js  RegisterPage.css  RegisterPage.js
frontend/src/components/: AppointmentCalendar.css  AppointmentCalendar.js  Notification.css  Notification.js
