[tool.poetry]
name = "olga-belova-oibelova"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.30"
djangorestframework = "3.14"
django-extensions = "3.2"
django-filter = "23.5"
django-cors-headers = "4.3"
drf-spectacular = "0.27"
seaborn = "^0.13.2"
matplotlib = "3.7"
django-import-export = "3.3"
djangoql = "0.19"
psycopg2-binary = "2.9.9"
pypdf2 = "^3.0.1"
pillow = "^12.2.0"
pymupdf = ">=1.24.5"
json-repair = "^0.59.10"
openai = "^2.38.0"
pdfplumber = "^0.11.9"
flake8 = "^7.3.0"
black = "^26.5.1"
djangorestframework-simplejwt = "^5.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
